--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-markdown": "^10.1.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.13.0",
+    "react-tsparticles": "^2.12.2",
     "resend": "^6.9.2",
-    "three": "^0.183.1"
+    "three": "^0.183.1",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
