--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-tsparticles": "^2.12.2",
     "resend": "^6.9.2",
     "three": "^0.183.1",
-    "tsparticles": "^3.9.1"
+    "tsparticles": "^3.9.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
