--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "vite",
-    "dev:backend": "node server.js",
+    "dev:backend": "node api/index.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
